--- a/frontend_web/package.json
+++ b/frontend_web/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rebass/forms": "^4.0.6",
+    "@rebass/preset": "^4.0.5",
+    "@types/rebass": "^4.0.7",
+    "@types/theme-ui": "^0.3.7",
+    "babel-eslint": "10.0.3",
+    "emotion-theming": "^10.0.27",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.4"
+    "rebass": "^4.0.7",
+    "redux": "^4.0.4",
+    "swr": "^0.3.5",
+    "theme-ui": "^0.3.1",
+    "typeface-inter": "^1.1.13"
   },
   "scripts": {
     "start": "react-scripts start",
